src/objects/SubScore__c.object
<CustomObject>
    <description>In construction.Every change on person Score.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <referenceTo>Score__c</referenceTo>
        <relationshipLabel>SubScores</relationshipLabel>
        <relationshipName>SubScores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>worth__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Worth</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>SubScore</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SS-{0000000000}</displayFormat>
        <label>SubScoreNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SubScores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>